2010-03-13 Sat  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl:  (top level): rearrange globals, use
        comamnds.
        (Version*): new.

2010-03-12 Sat  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl:
	(top level): English qw( -no_match_vars )

2010-03-02 Tue  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl: (top level): update copyright template.
	(Help): Chnage all mixed case options like --Link-check to
	lowercase --link-check.
	(DESCRIPTION): improve documentation and mention pm-doc
	example page.
	(FORMAT DESCRIPTION): rewrite the layout example: make sure
	all the columns line up with the presented text.

	* conversion/index.txt: Add index.css

	* conversion/index.css: New file.

2010-02-16  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl (Initialize): add "http://www.w3.org/TR/html4/loose.dtd"
	to doctype to fix W3C validator informational message.
	(HtmlFixes): remove duplicate <p><p> occurrances.

2010-02-13 Sat  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl (PrintEnd): at 'This file has been automatically generated'
	do not suppond using <P></P> tags as HTML standard does not allow it.

2009-08-31  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl (Help): Fix Perl 5.x problem where
	Pod::Text is broken.
	(HandleCommandLineArgs): Add --help-css.
	Change all --help-* options to lowercase.

2009-03-16  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl (HtmlFixes): Correct raw HTML entity translations
        &amp;#35; => &#35;

2009-02-11  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl (XlatDirectives): Adjust #t2html-* directive handling.
	Do not delete whole line, but only text starting at the directive.
	This makes it possible to embed them beside lines:

		example text #t2html-comment ....
        =>
		example text

2008-09-25  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl
	(HELP::Special text markings): Document subscript support.
	(XlatWordMarkup): Add subscript support.
	(Initialize): Add subscript support.